--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,3 +10,10 @@
 .markdown-body {
   color-scheme: dark;
 }
+
+.posts-board {
+  display: grid;
+  gap: 50px;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-auto-flow: row;
+}
