--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,4 +16,14 @@
   gap: 50px;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-auto-flow: row;
+  justify-items: center;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 768px) {
+  .posts-board {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
+  }
 }
